[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/Maps/FirstMountainStuff/panel.png" type="Texture" id=1]
[ext_resource path="res://Other/Fonts/lemon/19919.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/Global/Utils/Sign.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 21.3291, 69.2532 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.313726 )

[sub_resource type="Theme" id=3]
RichTextLabel/colors/default_color = Color( 1, 1, 1, 1 )
RichTextLabel/colors/font_color_selected = Color( 0.49, 0.49, 0.49, 1 )
RichTextLabel/colors/font_color_shadow = Color( 0, 0, 0, 0 )
RichTextLabel/colors/selection_color = Color( 0.1, 0.1, 1, 0.8 )
RichTextLabel/constants/line_separation = 1
RichTextLabel/constants/shadow_as_outline = 0
RichTextLabel/constants/shadow_offset_x = 1
RichTextLabel/constants/shadow_offset_y = 1
RichTextLabel/constants/table_hseparation = 3
RichTextLabel/constants/table_vseparation = 3
RichTextLabel/fonts/bold_font = null
RichTextLabel/fonts/bold_italics_font = null
RichTextLabel/fonts/italics_font = null
RichTextLabel/fonts/mono_font = null
RichTextLabel/fonts/normal_font = null
RichTextLabel/styles/focus = null
RichTextLabel/styles/normal = SubResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 15
font_data = ExtResource( 2 )

[node name="Sign" type="Area2D"]
position = Vector2( -621.245, 559.697 )
collision_layer = 8
collision_mask = 2147483649
script = ExtResource( 3 )

[node name="SignSprite" type="Sprite" parent="."]
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="SignCollision" type="CollisionShape2D" parent="."]
position = Vector2( 3.91583, -3.4438 )
shape = SubResource( 1 )

[node name="SignText" type="RichTextLabel" parent="."]
margin_left = -60.0
margin_top = -178.0
margin_right = 78.0
margin_bottom = -75.0
theme = SubResource( 3 )
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "Aled"
text = "Aled"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="." to="." method="_on_Sign_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Sign_body_exited"]
